<resources>
    <string name="app_name">MvvmTask</string>
    <string name="register">Register</string>
    <string name="accept_privacy_policy">Privacy Policy</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="keep_learning">Keep Learning</string>
    <string name="Home">Home</string>
    <string name="Userlist">User LIst</string>
    <string name="Multiplerecyclerview">Multiple recyclerview</string>
    <string name="RecyclerViewlist">RecyclerViewlist</string>
    <string name="item_name">Item Name</string>
    <string name="Pagination">Pagination</string>
    <string name="Quiz">Quiz</string>
    <string name="ok">OK</string>
    <string name="id">id:</string>
    <string name="Email">Email:</string>
    <string name="first_name">first Name:</string>
    <string name="last_name">Last name:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="del">Delete</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
</resources>