<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".register.view.RegisterActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/sky_color"
                android:orientation="vertical"></LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/reg_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/registration"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_25"
                        android:textStyle="bold"></TextView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_email"
                        style="@style/edittext_outline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:hint="@string/email"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etx_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textCursorDrawable="@drawable/bg_edittext_cursor" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_password"
                        style="@style/edittext_outline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:hint="@string/password"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/primary"
                        app:passwordToggleEnabled="true">

                      <com.google.android.material.textfield.TextInputEditText
                          android:id="@+id/etx_password"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/dimen_50"
                          android:imeOptions="actionNext"
                          android:inputType="text"
                          android:textCursorDrawable="@drawable/bg_edittext_cursor" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_confirm_password"
                        style="@style/edittext_outline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:hint="@string/confirm_password"
                        app:helperTextEnabled="true"
                        app:hintTextColor="@color/primary"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etx_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textCursorDrawable="@drawable/bg_edittext_cursor" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton

                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:backgroundTint="@color/sky_color"
                        android:text="@string/register"
                        android:textAllCaps="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_20sdp">

                        <CheckBox
                            android:id="@+id/privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:buttonTint="@color/primary"></CheckBox>


                        <TextView
                            android:id="@+id/termsTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/accept_privacy_policy"
                            android:textColor="@color/primary"></TextView>

                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>