<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#3F51B5"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:id="@+id/contentCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_25"
                android:textStyle="bold"></TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_loginemail"
                style="@style/edittext_outline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:hint="@string/email"
                app:helperTextTextColor="@color/red_color"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etx_loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="10"
                    android:textCursorDrawable="@drawable/bg_edittext_cursor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_loginpassword"
                style="@style/edittext_outline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:focusable="true"
                android:hint="@string/password"
                app:helperTextTextColor="@color/red_color"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/primary"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etx_loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/bg_edittext_cursor" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button

                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginBottom="@dimen/_20sdp"
                android:enabled="true"
                android:minWidth="160.0dip"
                android:text="@string/login"
                android:backgroundTint="@color/primary"
                android:textAllCaps="false" />



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/contentCard"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/primary"
            android:visibility="gone"

            />

    </RelativeLayout>


</RelativeLayout>